--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,8 +1,12 @@
 {
   "applications.title": "جست أرايفد",
+  "apply.for.job.form.message.section": "Anything else you want us to know?",
+  "apply.for.job.form.submit.button": "Apply",
+  "apply.for.job.modal.button": "Apply",
+  "apply.for.job.modal.title": "Anything else you want us to know?",
   "assignment.after_tax": "بعد خصم الضرائب",
   "assignment.assignments.title": "وظيفة",
-  "assignment.comments.title": "التعليق على وظيفة",
+  "assignment.comments.title": "Comments on the job",
   "assignment.details": "تفاصيل الوظيفة",
   "assignment.hours": "ساعات",
   "assignment.rate.gross_salary": "الراتب الإجمالي",
@@ -17,7 +21,7 @@
   "assignment.status.hired": "تمّ تعيينه",
   "assignment.status.log_in": "تسجيل الدخول للتقدم للوظيفة",
   "assignment.status.more_details": "للمزيد من المعلومات عن الوظيفة",
-  "assignment.status.offer.approve": "هل مازلت ترغب في أداء العمل، ويمكنك الإلتزام بذلك؟",
+  "assignment.status.offer.approve": "Would you still like to perform the job and can you commit to do so?",
   "assignment.status.offer": "حصلت على عرضٍ بخصوص القيام بالوظيفة أجِب ضمن (الوقت) المُحتسَب",
   "assignment.status.performed": "تم أداء الوظيفة",
   "assignment.status.reply": "قبول عرض",
@@ -27,6 +31,7 @@
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
   "common.back": "عودة",
+  "common.close": "أقفِل",
   "common.congratulation": "مبروك!",
   "common.error": "معذرة، حدث خطأ... لكن لا تقلق، نحن نقوم بإصلاحه!",
   "common.find_assignment": "إيجاد وظيفة",
@@ -46,19 +51,22 @@
   "confirmation.applied.for.job.description": "نحن ضمن وصلتُ لتوّي ننتظر بشغف  إذا أرسل مستلم الوظيفة عرض عندك 18 ساعة لتوافق على الوظيفة تجد الوظيفة تحت خانة وظائفي حيث توجد كل المكالمات بينك وبين مانح الوظيفة",
   "confirmation.applied.for.job.title": "لقد تقدمت لهذه الوظيفة.",
   "confirmation.contact.button": "العودة الى الاتصال",
-  "confirmation.contact.title": "شكراً لرسالتك! نرد على ذلك بأسرع ما يمكن",
+  "confirmation.contact.description": "We will reply as soon as we can.",
+  "confirmation.contact.title": "شكراً لرسالتك!",
   "confirmation.password.reset.button": "تسجيل الدخول",
   "confirmation.password.reset.description": "يمكنك الآن تسجيل دخولك باستخدام كلمة سرك الجديدة ",
   "confirmation.password.reset.link.button": "عودة",
   "confirmation.password.reset.link.description": "إذا تتبعت الرابط المذكور بالرسالة، يمكنك حينها تعيين كلمة مرور جديدة.",
   "confirmation.password.reset.link.title": "أُرسلت إليك رسالة إعادة تعيين بكلمة المرور!",
   "confirmation.password.reset.title": "تم تغيير كلمة السر بنجاح ",
+  "confirmation.signed.for.job.description": "Just Arrived will be in touch as soon as possible so don't forget to answer your phone and check your emails",
+  "confirmation.signed.for.job.title": "We believe in you! Just Arrived is confident that you will perform this job exceptionally!",
   "contact.form.description": "أسئلة أو أفكار؟ نودّ المساعدة!",
   "contact.form.instruction": "اِملأ معلوماتك في الأسفل",
   "contact.form.submit.button": "إرسال",
   "contact.title": "اتصال",
   "cookies.accept.button": "قبول",
-  "cookies.description": "باستخدام موقع justarrived.se، فإنك توافق على استخدام cookies من قبلنا وأطراف ثالثة لتعزيز تجربتك. لمزيد من المعلومات، أو لتغيير إعدادات cookies الخاصة بك.",
+  "cookies.description": "By using the Just Arrived application, you agree to the use of cookies by us and third parties to enhance your experience.",
   "cookies.info.description": "نستخدم كعكات لأسباب تقنية ولتسهيل استعمال خدماتنا ولإعطاءك كمستخدم معلومات جديرة عند زيارتك لموقعنا تستخدم الكعكات أيضا لقياس عدد زيارات موقعنا ولجمع الإحصائيات وتحسين خدماتنا الاستعانة بخدماتنا يعني الموافقة منك ان نستعمل الكعكات، هذا إذا لم يتم تعطيلها عن طريق تغيير الإعدادات للكعكات في متصفح الشبكة لديك",
   "cookies.info.title": "عن الكعكات",
   "cookies.read_more": "المزيد عن Cookies",
@@ -66,6 +74,8 @@
   "error.title": "حدث خطأ!",
   "faq.answer.label": "جواب",
   "faq.title": "أسئلة وأجوبة",
+  "forbidden.error.description": "Sorry, you’re not allowed to perform that action.",
+  "forbidden.error.title": "Forbidden",
   "forgot.password.login.link": "تسجيل الدخول",
   "forgot.password.submit.error": "للأسف، تعذر إرسال رابط إعادة تعيين كلمة المرور.",
   "forgot.password.title": "استعادة كلمة المرور",
@@ -90,13 +100,17 @@
   "home.jobs.applied.for.title": "الوظائف المتقدم لها",
   "home.jobs.slider.new.jobs.title": "وظائف جديدة",
   "home.jobs.slider.show.all.link": "عرض المزيد",
+  "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.ended.label": "انتهى",
+  "home.jobs.slider.user.jobs.job.offered.label": "Offered",
   "home.jobs.slider.user.jobs.title": "وظائفي",
-  "home.jobs.slider.user.jobs.will.perform.job.label": "جارٍ",
+  "home.jobs.slider.user.jobs.will.perform.job.label": "تمّ تعيينه",
   "home.partners.description": "Just Arrived عبارة عن مبادرة مجانية مشتركة تم ابتكارها للمساعدة في إلحاق المهاجرين الذين وصلوا مؤخرًا بسوق العمل السويدي. وهذه المبادرة تمتلكها إحدى المؤسسات ويتولى إدارتها اتحاد شركات.",
   "home.partners.title": "شركاؤنا",
   "input.account.number.label": "رقم البطاقة",
   "input.account.number.placeholder": "رقم البطاقة",
+  "input.apply.message.label": "Additonal message",
+  "input.apply.message.placeholder": "Additonal message",
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.city.label": "المدينة",
   "input.city.placeholder": "المدينة",
@@ -116,11 +130,14 @@
   "input.email.placeholder": "بريد إلكتروني",
   "input.first.name.label": "الاسم الصغير",
   "input.first.name.placeholder": "الاسم الصغير",
+  "input.frilans.terms.label": "أقبل بشروط وعقود عمل Frilans Finans .",
+  "input.frilans.terms.link": "Frilans Finans terms of employment",
   "input.gender.label": "الجنس",
   "input.gender.placeholder": "الجنس",
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
   "input.job.experience.label": "خبرة سنوات العمل",
   "input.job.experience.placeholder": "خبرة سنوات العمل",
+  "input.languages.hint": "Please rate how good you are at the chosen languages",
   "input.languages.label": "معلومات لغوية",
   "input.languages.placeholder": "معلومات لغوية",
   "input.last.name.label": "الاسم الأخير",
@@ -157,6 +174,7 @@
   "input.skatteverket.certificate.description": "تحميل صورة شهادة رقم التنسيق (من مصلحة الضرائب السويدية)",
   "input.skatteverket.certificate.header": "Coordination number certificate",
   "input.skatteverket.certificate.label": "Coordination number certificate",
+  "input.skills.hint": "Please rate how good you are at the chosen skills",
   "input.skills.label": "كفاءات",
   "input.skills.placeholder": "كفاءات",
   "input.ssn.label": "رقم الضمان الاجتماعي أو رقم التنسيق",
@@ -177,6 +195,8 @@
   "input.work.permit.front.label": "Work permit (front photo)",
   "input.zip.label": "صندوق بريد",
   "input.zip.placeholder": "صندوق بريد",
+  "job.additional.user.info.modal.button": "أكمل",
+  "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
   "jobs.list.job_hours_and_hourly_salary": "{{hours}}h ({{hourlySalary}})",
@@ -210,10 +230,14 @@
   "menu.main.profile": "صفحة معلومات شخصية",
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "Time report",
-  "page.not.found.error.description": "معذرة, الصفحة التي تبحث عنها غير موجودة.",
+  "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
+  "sign.for.job.form.submit.button": "Sign",
+  "sign.for.job.form.terms.section": "Terms of employment",
+  "sign.for.job.modal.button": "Sign",
+  "sign.for.job.modal.title": "You are a star! The job is yours if you want it",
   "skill.proficiency.basic": "معرفة أساسية ",
   "skill.proficiency.beginner": "مبتدئ",
   "skill.proficiency.expert": "خبير ",
@@ -249,6 +273,16 @@
   "user.settings.form.personal.info.header": "المعلومات الشخصية",
   "user.settings.form.settings.header": "اِعدادات",
   "user.settings.form.submit.button": "حفظ تغييرات ملف التعريف",
+  "user.update.form.address.header": "العنوان",
+  "user.update.form.bank.details.header": "معلومات مصرفية",
+  "user.update.form.education.section.header": "دراسة",
+  "user.update.form.general.skills.section.header": "مهارات عامة",
+  "user.update.form.language.skills.section.header": "معلومات لغوية",
+  "user.update.form.personal.info.header": "المعلومات الشخصية",
+  "user.update.form.personal.presentation.section.header": "Personal presentation",
+  "user.update.form.settings.header": "اِعدادات",
+  "user.update.form.status.section.header": "Status",
+  "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
