--- a/src/assets/i18n/ti.json
+++ b/src/assets/i18n/ti.json
@@ -1,14 +1,18 @@
 {
   "applications.title": "Just Arrived",
+  "apply.for.job.form.message.section": "Anything else you want us to know?",
+  "apply.for.job.form.submit.button": "Apply",
+  "apply.for.job.modal.button": "Apply",
+  "apply.for.job.modal.title": "Anything else you want us to know?",
   "assignment.after_tax": "after tax",
-  "assignment.assignments.title": "Job",
-  "assignment.comments.title": "Comment on the job",
+  "assignment.assignments.title": "Uppdrag",
+  "assignment.comments.title": "Comments on the job",
   "assignment.details": "Job details",
-  "assignment.hours": "Hours",
+  "assignment.hours": "Timmar",
   "assignment.rate.gross_salary": "gross salary",
   "assignment.status.applied": "Te ev kar xwastiye",
   "assignment.status.apply": "Vî karî bixwaze",
-  "assignment.status.click_here": "Click here",
+  "assignment.status.click_here": "Vir bitikîne",
   "assignment.status.company.approve_user": "would like you to hire you for this assignment",
   "assignment.status.confirmation_error" : "An error occured when providing answer to this job.",
   "assignment.status.create_account": "Create an account",
@@ -17,7 +21,7 @@
   "assignment.status.hired": "Hat wezîfedar kirin",
   "assignment.status.log_in": "Log in to apply",
   "assignment.status.more_details": "For more details",
-  "assignment.status.offer.approve": "Would you still like to perform the assignment and can you commit to do so?",
+  "assignment.status.offer.approve": "Would you still like to perform the job and can you commit to do so?",
   "assignment.status.offer": "Du har fått erbjudande om att utföra uppdraget. Svara inom",
   "assignment.status.performed": "Job performed",
   "assignment.status.reply": "Accept offer",
@@ -27,54 +31,60 @@
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
   "common.back": "Vegere",
-  "common.congratulation": "Congratulations!",
+  "common.close": "Close",
+  "common.congratulation": "Grattis!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
-  "common.find_assignment": "Find jobs",
-  "common.hour": "hours",
+  "common.find_assignment": "Karekî bibîne",
+  "common.hour": "tim",
   "common.login": "Sign in",
-  "common.min": "minutes",
+  "common.min": "min",
   "common.net_salary": "after tax",
   "common.no": "Na",
   "common.save": "Biparêze",
-  "common.start_here": "Start here!",
+  "common.start_here": "Starta här!",
   "common.submit": "Bişîne",
   "common.yes": "Erê",
   "company.assignments.filter_1": "Kar",
   "company.assignments.filter_2": "Arşîv",
   "component.loading": "Loading..",
-  "confirmation.applied.for.job.button": "Search for more jobs",
-  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Jobs. This is where you'll also find all communication that happens between you and the employer.",
+  "confirmation.applied.for.job.button": "Karên din peyda bike",
+  "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragstagaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
   "confirmation.applied.for.job.title": "You have applied for the job",
-  "confirmation.contact.button": "Back to contact",
-  "confirmation.contact.title": "Thanks for your message! We will reply as soon as we can.",
+  "confirmation.contact.button": "Veger kontaktê",
+  "confirmation.contact.description": "We will reply as soon as we can.",
+  "confirmation.contact.title": "Thanks for your message!",
   "confirmation.password.reset.button": "Sign in",
   "confirmation.password.reset.description": "You can now sign in using your new password.",
-  "confirmation.password.reset.link.button": "Back",
+  "confirmation.password.reset.link.button": "Vegere",
   "confirmation.password.reset.link.description": "If you follow the link provided in the message you can thereafter set a new password.",
   "confirmation.password.reset.link.title": "A password reset message has been sent to you!",
   "confirmation.password.reset.title": "Successfully changed your password!",
-  "contact.form.description": "Questions? Thoughts? We'd love to help!",
-  "contact.form.instruction": "Enter your details below.",
-  "contact.form.submit.button": "Send",
-  "contact.title": "Contact",
+  "confirmation.signed.for.job.description": "Just Arrived will be in touch as soon as possible so don't forget to answer your phone and check your emails",
+  "confirmation.signed.for.job.title": "We believe in you! Just Arrived is confident that you will perform this job exceptionally!",
+  "contact.form.description": "Pirs yan hizir? Em bi kêfxweşî alîkarîyê dikin!",
+  "contact.form.instruction": "Agahdarîyên xwe li jêrê qeyd bike.",
+  "contact.form.submit.button": "Bişîne",
+  "contact.title": "Têkilî",
   "cookies.accept.button": "Accept",
-  "cookies.description": "By using the justarrived.se website, you agree to the use of cookies by us and third parties to enhance your experience. For more information, or to change your cookie settings.",
+  "cookies.description": "By using the Just Arrived application, you agree to the use of cookies by us and third parties to enhance your experience.",
   "cookies.info.description": "Vi använder cookies av tekniska skäl, för att underlätta användningen av våra tjänster och för att ge dig som användare relevant information när du besöker vår webbplats. Cookies används även för att mäta trafiken på vår webbplats, för insamling av statistik och för att förbättra våra tjänster. Genom att använda våra tjänster godkänner du att vi använder cookies, såvida du inte har inaktiverat dessa genom att ändra inställningarna för cookies i din webbläsare.",
   "cookies.info.title": "Om cookies",
   "cookies.read_more": "More about Cookies",
   "error.description": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "error.title": "An error occured!",
-  "faq.answer.label": "Answers",
-  "faq.title": "Questions and answers",
+  "faq.answer.label": "Svar",
+  "faq.title": "Frågor och Svar",
+  "forbidden.error.description": "Sorry, you’re not allowed to perform that action.",
+  "forbidden.error.title": "Forbidden",
   "forgot.password.login.link": "Sign in",
   "forgot.password.submit.error": "Unfortunately, a password reset link could not be sent.",
   "forgot.password.title": "Restore password",
-  "home.header.logged.in.jobs.button": "Find jobs",
+  "home.header.logged.in.jobs.button": "Karekî bibîne",
   "home.header.logged.in.profile.button": "Edit profile",
   "home.header.logged.in.title": "Welcome {{username}}!",
   "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "home.header.logged.out.login.button": "Sign in",
-  "home.header.logged.out.register.button": "Create account",
+  "home.header.logged.out.register.button": "Hesabekê biafirîne",
   "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labor market",
   "home.header.logged.out.title": "Welcome!",
   "home.instructions.first.section.instruction0": "Sign in or create an account",
@@ -88,15 +98,19 @@
   "home.instructions.second.section.instruction3": "Sign in often and make sure your profile is up to date",
   "home.instructions.second.section.title": "Maximize your chances",
   "home.jobs.applied.for.title": "Jobs applied for",
-  "home.jobs.slider.new.jobs.title": "New jobs",
-  "home.jobs.slider.show.all.link": "Show all",
+  "home.jobs.slider.new.jobs.title": "Karên Nû",
+  "home.jobs.slider.show.all.link": "Hemûyan nîşan bide",
+  "home.jobs.slider.user.jobs.job.applied.label": "Applied",
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
-  "home.jobs.slider.user.jobs.title": "My jobs",
-  "home.jobs.slider.user.jobs.will.perform.job.label": "Ongoing",
+  "home.jobs.slider.user.jobs.job.offered.label": "Offered",
+  "home.jobs.slider.user.jobs.title": "Karên min",
+  "home.jobs.slider.user.jobs.will.perform.job.label": "Hired",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
-  "home.partners.title": "Our partners",
-  "input.account.number.label": "Account number",
-  "input.account.number.placeholder": "Account number",
+  "home.partners.title": "Hevkarên me",
+  "input.account.number.label": "Nimreya kartê",
+  "input.account.number.placeholder": "Nimreya kartê",
+  "input.apply.message.label": "Additonal message",
+  "input.apply.message.placeholder": "Additonal message",
   "input.at.und.label": "Do you have an AT-UND permit? (Allowed to work during asylum)",
   "input.city.label": "City",
   "input.city.placeholder": "City",
@@ -110,39 +124,42 @@
   "input.description.placeholder": "Describe yourself",
   "input.education.label": "Describe your education",
   "input.education.placeholder":  "Describe your education",
-  "input.email.label": "Email",
+  "input.email.label": "E-post",
   "input.email.or.phone.label": "Email or phone",
   "input.email.or.phone.placeholder": "Email or phone",
-  "input.email.placeholder": "Email",
-  "input.first.name.label": "First name",
-  "input.first.name.placeholder": "First name",
+  "input.email.placeholder": "E-post",
+  "input.first.name.label": "Nav",
+  "input.first.name.placeholder": "Nav",
+  "input.frilans.terms.label": "I accept Frilans Finans terms of employment",
+  "input.frilans.terms.link": "Frilans Finans terms of employment",
   "input.gender.label": "Gender",
   "input.gender.placeholder": "Gender",
   "input.got.coordination.number.label": "Do you have a coordination number (samordningsnummmer)?",
-  "input.job.experience.label": "Work experience",
-  "input.job.experience.placeholder": "Work experience",
-  "input.languages.label": "Language skills",
-  "input.languages.placeholder": "Language skills",
+  "input.job.experience.label": "Tecribeya jiyana karî",
+  "input.job.experience.placeholder": "Tecribeya jiyana karî",
+  "input.languages.hint": "Please rate how good you are at the chosen languages",
+  "input.languages.label": "Zanîna zimanan",
+  "input.languages.placeholder": "Zanîna zimanan",
   "input.last.name.label": "Last name",
   "input.last.name.placeholder": "Last name",
   "input.lma.card.description": "Photo of my LMA card",
   "input.lma.card.header": "LMA card",
   "input.lma.card.label": "LMA card",
-  "input.message.label": "Message",
-  "input.message.placeholder": "Message",
-  "input.name.label": "Name",
-  "input.name.placeholder": "Name",
+  "input.message.label": "Meddelanden",
+  "input.message.placeholder": "Meddelanden",
+  "input.name.label": "Nav",
+  "input.name.placeholder": "Nav",
   "input.new.password.label": "New password",
   "input.new.password.placeholder": "New password",
   "input.old.password.label": "Old password",
   "input.old.password.placeholder": "Old password",
-  "input.password.label": "Password",
-  "input.password.placeholder": "Password",
+  "input.password.label": "Lösenord",
+  "input.password.placeholder": "Lösenord",
   "input.personal.id.description": "Photo of my personal ID card",
   "input.personal.id.header": "Personal ID",
   "input.personal.id.label": "Personal ID",
-  "input.phone.label": "Phone",
-  "input.phone.placeholder": "Phone",
+  "input.phone.label": "Telefon",
+  "input.phone.placeholder": "Telefon",
   "input.repeat.password.label": "Repeat password",
   "input.repeat.password.placeholder": "Repeat password",
   "input.residence.permit.back.description": "Back photo of my residence permit",
@@ -157,26 +174,29 @@
   "input.skatteverket.certificate.description": "Photo of my coordination number certificate (from the swedish tax agency)",
   "input.skatteverket.certificate.header": "Coordination number certificate",
   "input.skatteverket.certificate.label": "Coordination number certificate",
-  "input.skills.label": "Skills",
-  "input.skills.placeholder": "Skills",
+  "input.skills.hint": "Please rate how good you are at the chosen skills",
+  "input.skills.label": "Kompetens",
+  "input.skills.placeholder": "Kompetens",
   "input.ssn.label": "Social security number or coordination number",
   "input.ssn.placeholder":  "Social security number or coordination number",
   "input.status.label": "Current status",
   "input.status.placeholder": "Current status",
-  "input.street.label": "Street",
-  "input.street.placeholder": "Street",
+  "input.street.label": "Kolan",
+  "input.street.placeholder": "Kolan",
   "input.system.language.description": "This is the language we will use to communicate with you",
   "input.system.language.label": "Default language",
   "input.system.language.placeholder": "Default language",
   "input.terms.label": "I accept Just Arrived's terms, conditions and employment contract",
   "input.work.permit.back.description": "Back photo of my work permit",
-  "input.work.permit.back.header": "Work permit",
+  "input.work.permit.back.header": "Destûra karkirinê",
   "input.work.permit.back.label": "Work permit (back photo)",
   "input.work.permit.front.description": "Front photo of my work permit",
-  "input.work.permit.front.header": "Work permit",
+  "input.work.permit.front.header": "Destûra karkirinê",
   "input.work.permit.front.label": "Work permit (front photo)",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
+  "job.additional.user.info.modal.button": "Continue",
+  "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
   "jobs.list.job_hours_and_hourly_salary": "{{hours}}h ({{hourlySalary}})",
@@ -186,8 +206,8 @@
   "language.proficiency.expert": "Native speaker",
   "language.proficiency.intermediate": "Working proficiency",
   "language.proficiency.professional": "Professional proficiency",
-  "login.form.forgot.password.link": "Forgotten your password?",
-  "login.form.register.link": "Create account",
+  "login.form.forgot.password.link": "Glömt lösenord?",
+  "login.form.register.link": "Hesabekê biafirîne",
   "login.form.submit.button": "Sign in",
   "login.title": "Sign in",
   "map.geolocation.error.close": "Click to hide.",
@@ -202,53 +222,67 @@
   "menu.language.title": "Zimanî bibijêre",
   "menu.language.translation_by_probono": "Translation made probono by",
   "menu.main.contact": "Têkilî",
-  "menu.main.faq": "Questions and Answers",
+  "menu.main.faq": "Frågor och Svar",
   "menu.main.find_assignment": "Karekî bibîne",
   "menu.main.login": "Sign in",
   "menu.main.logout": "Derkeve",
   "menu.main.my_assignment": "Karên min",
-  "menu.main.profile": "Profile",
-  "menu.main.register": "Create user",
+  "menu.main.profile": "Profîl",
+  "menu.main.register": "Hesabekê biafirîne",
   "menu.main.staffing_time_report": "Time report",
-  "page.not.found.error.description": "Sorry, the page you are looking for does not exist.",
+  "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
+  "sign.for.job.form.submit.button": "Sign",
+  "sign.for.job.form.terms.section": "Terms of employment",
+  "sign.for.job.modal.button": "Sign",
+  "sign.for.job.modal.title": "You are a star! The job is yours if you want it",
   "skill.proficiency.basic": "Basic knowledge",
   "skill.proficiency.beginner": "Beginner",
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Intermediate knowledge",
   "skill.proficiency.professional": "Professional",
-  "terms.frilans_finans.accept": "I accept Frilans Finans",
+  "terms.frilans_finans.accept": "Jag accepterar Frilans Finans",
   "terms": "terms, conditions and employment contract",
   "user.account.bank": "Clearing number",
   "user.account.cardnr": "Nimreya kartê",
   "user.account.description": "Where would you like your salary to be paid out once you have completed the job?",
   "user.account": "Bank account details",
-  "user.profile.form.education.section.header": "Education",
+  "user.profile.form.education.section.header": "Xwendin",
   "user.profile.form.general.skills.section.header": "General skills",
-  "user.profile.form.language.skills.section.header": "Language skills",
+  "user.profile.form.language.skills.section.header": "Zanîna zimanan",
   "user.profile.form.personal.presentation.section.header": "Personal presentation",
   "user.profile.form.status.section.header": "Status",
   "user.profile.form.submit.button": "Save changes",
-  "user.profile.form.work.experience.section.header": "Work experience",
+  "user.profile.form.work.experience.section.header": "Tecribeya jiyana karî",
   "user.profile.header.information": "Remember that a complete profile increases your chances of getting jobs",
-  "user.profile.header.title": "Profile",
+  "user.profile.header.title": "Profîl",
   "user.profile.tab.personal.details.title": "Personal",
-  "user.profile.tab.profile.details.title": "Profile",
+  "user.profile.tab.profile.details.title": "Profîl",
   "user.register.form.address.section.header": "Address",
   "user.register.form.general.information.section.header": "General information",
-  "user.register.form.password.section.header": "Password",
-  "user.register.form.settings.section.header": "Settings",
+  "user.register.form.password.section.header": "Lösenord",
+  "user.register.form.settings.section.header": "Inställningar",
   "user.register.form.submit.button": "Sign up",
   "user.register.form.terms.section.header": "Terms and conditions",
   "user.register.title": "Sign up",
   "user.settings.form.address.header": "Address",
-  "user.settings.form.bank.details.header": "Bank details",
+  "user.settings.form.bank.details.header": "Bankuppgifter",
   "user.settings.form.change.password.header": "Change password",
   "user.settings.form.personal.info.header": "Personal information",
-  "user.settings.form.settings.header": "Settings",
+  "user.settings.form.settings.header": "Inställningar",
   "user.settings.form.submit.button": "Save changes",
+  "user.update.form.address.header": "Address",
+  "user.update.form.bank.details.header": "Bank details",
+  "user.update.form.education.section.header": "Education",
+  "user.update.form.general.skills.section.header": "General skills",
+  "user.update.form.language.skills.section.header": "Language skills",
+  "user.update.form.personal.info.header": "Personal information",
+  "user.update.form.personal.presentation.section.header": "Personal presentation",
+  "user.update.form.settings.header": "Settings",
+  "user.update.form.status.section.header": "Status",
+  "user.update.form.submit.button": "Save changes",
   "validations.email_pattern": "must look like an email address",
   "validations.maxlength": "is too long (maximum {{maxLength}} characters)",
   "validations.minlength": "is too short (minimum {{minLength}} characters)",
