--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -1,8 +1,12 @@
 {
   "applications.title": "Just Arrived",
+  "apply.for.job.form.message.section": "Någonting mer du vill att vi visa ska veta?",
+  "apply.for.job.form.submit.button": "Ansök",
+  "apply.for.job.modal.button": "Ansök",
+  "apply.for.job.modal.title": "Någonting mer du vill att vi ska veta?",
   "assignment.after_tax": "efter skatt",
   "assignment.assignments.title": "Uppdrag",
-  "assignment.comments.title": "Kommentera på jobbet",
+  "assignment.comments.title": "Kommentarer på jobbet",
   "assignment.details": "Uppdragsbeskrivning",
   "assignment.hours": "Timmar",
   "assignment.rate.gross_salary": "bruttolön",
@@ -17,22 +21,23 @@
   "assignment.status.hired": "Anlitad",
   "assignment.status.log_in": "Logga in för att söka",
   "assignment.status.more_details": "Mer detaljer",
-  "assignment.status.offer.approve": "Vill du fortfarande utföra uppdraget, och kan du åta dig att göra det ?",
+  "assignment.status.offer.approve": "Vill du fortfarande ha jobbet och kan du åta dig att utföra det?",
   "assignment.status.offer": "Du har fått erbjudande om att utföra uppdraget. Svara inom",
   "assignment.status.performed": "Uppdrag utfört",
   "assignment.status.reply": "Tacka ja",
   "assignment.status.user_company_hire": "Företaget vill anlita dig",
   "assignment.status.you_hired": "Du har blivit anställd",
-  "button.form.submit.fail": "Det finns lite fel, var snäll åtgärda dem ovan.",
-  "button.form.submit.success": "Sparat!",
+  "button.form.submit.fail": "Det finns några fel du måste åtgärda ovan.",
+  "button.form.submit.success": "Det gick bra!",
   "card.document.upload.empty.documents": "Tomt",
   "common.back": "Tillbaka",
+  "common.close": "Stäng",
   "common.congratulation": "Grattis!",
-  "common.error": "Hoppsan! Något gick fel.. oroa dig inte vi jobbar på det!",
+  "common.error": "Hoppsan! Något gick fel.. Men oroa dig inte, vi jobbar på det!",
   "common.find_assignment": "Hitta uppdrag",
-  "common.hour": "tim",
+  "common.hour": "timmar",
   "common.login": "Logga in",
-  "common.min": "min",
+  "common.min": "minuter",
   "common.net_salary": "efter skatt",
   "common.no": "Nej",
   "common.save": "Spara",
@@ -46,13 +51,16 @@
   "confirmation.applied.for.job.description": "Vi på Just Arrived håller tummarna. Om uppdragsgivaren skickar ett erbjudande har du 18 timmar på dig att tacka ja till uppdraget. Du hittar uppdraget under Mina Uppdrag. Där samlas även all kommunikation som sker med uppdragsgivaren.",
   "confirmation.applied.for.job.title": "Du har ansökt om uppdraget",
   "confirmation.contact.button": "Tillbaka till kontakt",
-  "confirmation.contact.title": "Tack för ditt meddelande! Vi besvarar det så fort vi kan.",
+  "confirmation.contact.description": "Vi kommer svara så snart vi kan",
+  "confirmation.contact.title": "Tack för ditt meddelande!",
   "confirmation.password.reset.button": "Logga in",
   "confirmation.password.reset.description": "Du kan nu logga in med ditt nya lösenord.",
   "confirmation.password.reset.link.button": "Tillbaka",
   "confirmation.password.reset.link.description": "Om du klickar på länken som finns i meddelandet kan du välja nytt lösenord.",
   "confirmation.password.reset.link.title": "Instruktioner om hur det återställer dit lösenord har skickats till dig!",
   "confirmation.password.reset.title": "Ditt lösenord har blivit ändrat!",
+  "confirmation.signed.for.job.description": "Just Arrived kommer att kontakta dig så snart som möjligt så glöm inte att svara i telefonen och kolla din e-post",
+  "confirmation.signed.for.job.title": "\nVi tror på dig! Just Arrived är säker på att du kommer att utföra jobbet exceptionellt!",
   "contact.form.description": "Frågor eller funderingar? Vi hjälper gärna till!",
   "contact.form.instruction": "Fyll i dina uppgifter nedan.",
   "contact.form.submit.button": "Skicka",
@@ -66,8 +74,10 @@
   "error.title": "Ett fel uppstod!",
   "faq.answer.label": "Svar",
   "faq.title": "Frågor och svar",
+  "forbidden.error.description": "\nTyvärr, du har inte tillåtelse att utföra åtgärden.",
+  "forbidden.error.title": "Otillåtet",
   "forgot.password.login.link": "Logga in",
-  "forgot.password.submit.error": "Tyvärr kunde inte lösenordet återställas.",
+  "forgot.password.submit.error": "Tyvärr så kunde inte länken för lösenordsåterställning skickas till dig.",
   "forgot.password.title": "Återställ lösenord",
   "home.header.logged.in.jobs.button": "Hitta uppdrag",
   "home.header.logged.in.profile.button": "Redigera profil",
@@ -92,12 +102,15 @@
   "home.jobs.slider.show.all.link": "Visa alla",
   "home.jobs.slider.user.jobs.job.applied.label": "Ansökt",
   "home.jobs.slider.user.jobs.job.ended.label": "Genomfört",
+  "home.jobs.slider.user.jobs.job.offered.label": "Erbjuden",
   "home.jobs.slider.user.jobs.title": "Mina uppdrag",
-  "home.jobs.slider.user.jobs.will.perform.job.label": "Pågående",
+  "home.jobs.slider.user.jobs.will.perform.job.label": "Anlitad",
   "home.partners.description": "Just Arrived är ett gemensamt pro bono-initiativ för att hjälpa nyanlända in på den svenska arbetsmarknaden. Vi ägs av en stiftelse och drivs av en sammanslutning av företag.",
   "home.partners.title": "Våra partners",
   "input.account.number.label": "Kontonummer",
   "input.account.number.placeholder": "Kontonummer",
+  "input.apply.message.label": "Extra meddelande",
+  "input.apply.message.placeholder": "Extra meddelande",
   "input.at.und.label": "Har du AT-UND? (Är du tillåten att jobba)",
   "input.city.label": "Stad",
   "input.city.placeholder": "Stad",
@@ -117,11 +130,14 @@
   "input.email.placeholder": "E-post",
   "input.first.name.label": "Förnamn",
   "input.first.name.placeholder": "Förnamn",
+  "input.frilans.terms.label": "Jag accepterar Frilans Finans anställningsvillkor",
+  "input.frilans.terms.link": "Frilans Finans anställningsvillkor",
   "input.gender.label": "Kön",
   "input.gender.placeholder": "Kön",
   "input.got.coordination.number.label": "Har du ett samordningsnummer?",
   "input.job.experience.label": "Arbetslivserfarenhet",
   "input.job.experience.placeholder": "Arbetslivserfarenhet",
+  "input.languages.hint": "\nBedöm hur bra du är på de valda språken",
   "input.languages.label": "Språkkunskaper",
   "input.languages.placeholder": "Språkkunskaper",
   "input.last.name.label": "Efternamn",
@@ -158,6 +174,7 @@
   "input.skatteverket.certificate.description": "Foto på samordningsnummer-certifikatet (från Skatteverket)",
   "input.skatteverket.certificate.header": "Samordningsnummer certifikat",
   "input.skatteverket.certificate.label": "Samordningsnummer certifikat",
+  "input.skills.hint": "\nBedöm hur bra du är på de valda kompetenserna",
   "input.skills.label": "Kompetenser",
   "input.skills.placeholder": "Kompetenser",
   "input.ssn.label": "Personnummer eller samordningsnummer",
@@ -178,6 +195,8 @@
   "input.work.permit.front.label": "Arbetstillstånd (framsidan)",
   "input.zip.label": "Postnummer",
   "input.zip.placeholder": "Postnummer",
+  "job.additional.user.info.modal.button": "Fortsätt",
+  "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
   "job.card.currency.per.hour": "{{currency}}/timmen",
   "job.card.hours": "{{hours}} timmar",
   "jobs.list.job_hours_and_hourly_salary": "{{hours}} timmar ({{hourlySalary}})",
@@ -192,7 +211,7 @@
   "login.form.submit.button": "Logga in",
   "login.title": "Logga in",
   "map.geolocation.error.close": "Dölj.",
-  "map.geolocation.error.permissionDenied": "du har stängd av möjligheten att bli positionerad på den här sidan.",
+  "map.geolocation.error.permissionDenied": "du har stängt av möjligheten att bli positionerad på den här sidan.",
   "map.geolocation.error.positionUnavailable": "vi kan inte bestämma din position.",
   "map.geolocation.error.prefix": "Din plats kunde inte hittas eftersom {{mapError}}",
   "map.geolocation.error.timeout": "tjänsten kunde inte nås.",
@@ -211,10 +230,14 @@
   "menu.main.profile": "Profil",
   "menu.main.register": "Skapa konto",
   "menu.main.staffing_time_report": "Tidsrapportera",
-  "page.not.found.error.description": "Vi ber om ursäkt, sidan du letar efter finns inte.",
+  "page.not.found.error.description": "Vi ber om ursäkt, sidan eller resursen du letar efter finns inte.",
   "page.not.found.error.title": "404 - Sidan kan inte hittas",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
+  "sign.for.job.form.submit.button": "Signera",
+  "sign.for.job.form.terms.section": "Anställningsvillkor",
+  "sign.for.job.modal.button": "Signera",
+  "sign.for.job.modal.title": "Du är grym! Jobbet är ditt ifall du vill ha det",
   "skill.proficiency.basic": "Grundläggande kunskaper",
   "skill.proficiency.beginner": "Nybörjare",
   "skill.proficiency.expert": "Expert",
@@ -250,6 +273,16 @@
   "user.settings.form.personal.info.header": "Personlig information",
   "user.settings.form.settings.header": "Inställningar",
   "user.settings.form.submit.button": "Spara ändringar",
+  "user.update.form.address.header": "Adress",
+  "user.update.form.bank.details.header": "Bankuppgifter",
+  "user.update.form.education.section.header": "Utbildning",
+  "user.update.form.general.skills.section.header": "Generella kompetenser",
+  "user.update.form.language.skills.section.header": "Språkkunskaper",
+  "user.update.form.personal.info.header": "Personlig information",
+  "user.update.form.personal.presentation.section.header": "Personlig presentation",
+  "user.update.form.settings.header": "Inställningar",
+  "user.update.form.status.section.header": "Status",
+  "user.update.form.submit.button": "Spara ändringar",
   "validations.email_pattern": "måste se ut som en epostadress",
   "validations.maxlength": "är för lång (max {{maxLength}} tecken)",
   "validations.minlength": "är för kort (minst {{minLength}} tecken)",
