--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -210,6 +210,8 @@
   "login.form.register.link": "إنشاء حساب",
   "login.form.submit.button": "تسجيل الدخول",
   "login.title": "تسجيل الدخول",
+  "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
+  "lost.connection.title": "Lost connection",
   "map.geolocation.error.close": "انقر للإخفاء.",
   "map.geolocation.error.permissionDenied": "لقد تعطل دخولك إالى هذا المكان في هذا الموقع ",
   "map.geolocation.error.positionUnavailable": "نحن غير قادرين على تحديد مكانك",
@@ -279,7 +281,7 @@
   "user.update.form.general.skills.section.header": "مهارات عامة",
   "user.update.form.language.skills.section.header": "معلومات لغوية",
   "user.update.form.personal.info.header": "المعلومات الشخصية",
-  "user.update.form.personal.presentation.section.header": "Personal presentation",
+  "user.update.form.personal.presentation.section.header": "تقديم",
   "user.update.form.settings.header": "اِعدادات",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
