--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -31,7 +31,7 @@
   "button.form.submit.success": "Success!",
   "card.document.upload.empty.documents": "Empty",
   "common.back": "بازگشت",
-  "common.close": "Close",
+  "common.close": "ببندید",
   "common.congratulation": "تبریک!",
   "common.error": "Oops, something went a bit wrong... But don't worry, we are on it!",
   "common.find_assignment": "پیداکردن ماموریت کاری",
@@ -104,7 +104,7 @@
   "home.jobs.slider.user.jobs.job.ended.label": "Finished",
   "home.jobs.slider.user.jobs.job.offered.label": "Offered",
   "home.jobs.slider.user.jobs.title": "ماموریت‌های کاری من",
-  "home.jobs.slider.user.jobs.will.perform.job.label": "Hired",
+  "home.jobs.slider.user.jobs.will.perform.job.label": "بکار گرفته شده ",
   "home.partners.description": "Just Arrived is a joint pro-bono initiative designed to help newly arrived immigrants to the Swedish labour market. We are owned by a foundation and is run by an association of companies.",
   "home.partners.title": "همکاران کاری ما",
   "input.account.number.label": "شماره کارت",
@@ -195,7 +195,7 @@
   "input.work.permit.front.label": "Work permit (front photo)",
   "input.zip.label": "Zip code",
   "input.zip.placeholder": "Zip code",
-  "job.additional.user.info.modal.button": "Continue",
+  "job.additional.user.info.modal.button": "ادامه دهید",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.hours": "{{hours}} hours",
@@ -210,6 +210,8 @@
   "login.form.register.link": "یک حساب کاربری ایجاد کنید",
   "login.form.submit.button": "Sign in",
   "login.title": "Sign in",
+  "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
+  "lost.connection.title": "Lost connection",
   "map.geolocation.error.close": "Click to hide.",
   "map.geolocation.error.permissionDenied": "you have disabled access to your location for this site.",
   "map.geolocation.error.positionUnavailable": "we are unable to determine your location.",
@@ -274,13 +276,13 @@
   "user.settings.form.settings.header": "تنظیمات",
   "user.settings.form.submit.button": "Save changes",
   "user.update.form.address.header": "Address",
-  "user.update.form.bank.details.header": "Bank details",
-  "user.update.form.education.section.header": "Education",
+  "user.update.form.bank.details.header": "مشخصات بانکی",
+  "user.update.form.education.section.header": "تحصیلات",
   "user.update.form.general.skills.section.header": "General skills",
-  "user.update.form.language.skills.section.header": "Language skills",
+  "user.update.form.language.skills.section.header": "معلومات زبان",
   "user.update.form.personal.info.header": "Personal information",
   "user.update.form.personal.presentation.section.header": "Personal presentation",
-  "user.update.form.settings.header": "Settings",
+  "user.update.form.settings.header": "تنظیمات",
   "user.update.form.status.section.header": "Status",
   "user.update.form.submit.button": "Save changes",
   "validations.email_pattern": "must look like an email address",
