--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -236,6 +236,10 @@
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
+  "register.modal.button": "Sign up",
+  "register.modal.title": "Sign up",
+  "registered.modal.description": "Your account was successfully created",
+  "registered.modal.title": "Welcome {{username}}!",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
   "sign.for.job.form.submit.button": "Sign",
