--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -209,6 +209,8 @@
   "login.form.forgot.password.link": "نسيت كلمة السرّ؟",
   "login.form.register.link": "إنشاء حساب",
   "login.form.submit.button": "تسجيل الدخول",
+  "login.modal.button": "Login",
+  "login.modal.title": "Login",
   "login.title": "تسجيل الدخول",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
@@ -234,6 +236,10 @@
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - صفحة غير موجودة",
+  "register.modal.button": "تسجيل الاشتراك",
+  "register.modal.title": "تسجيل الاشتراك",
+  "registered.modal.description": "Your account was successfully created",
+  "registered.modal.title": "مرحبًا {{username}}!",
   "reset.password.form.submit.button": "تغيير كلمة المرور",
   "reset.password.title": "حدد كلمة مرورك الجديدة ",
   "sign.for.job.form.submit.button": "Sign",
