--- a/src/assets/i18n/fa_AF.json
+++ b/src/assets/i18n/fa_AF.json
@@ -209,6 +209,8 @@
   "login.form.forgot.password.link": "Glömt lösenord?",
   "login.form.register.link": "یک حساب کاربری ایجاد کنید",
   "login.form.submit.button": "Sign in",
+  "login.modal.button": "Login",
+  "login.modal.title": "Login",
   "login.title": "Sign in",
   "lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline",
   "lost.connection.title": "Lost connection",
@@ -234,6 +236,10 @@
   "menu.main.staffing_time_report": "Time report",
   "page.not.found.error.description": "Sorry, the page or resource you are looking for does not exist.",
   "page.not.found.error.title": "404 - Page Not Found",
+  "register.modal.button": "Sign up",
+  "register.modal.title": "Sign up",
+  "registered.modal.description": "Your account was successfully created",
+  "registered.modal.title": "Welcome {{username}}!",
   "reset.password.form.submit.button": "Change password",
   "reset.password.title": "Set your new password",
   "sign.for.job.form.submit.button": "Sign",
