--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -209,6 +209,8 @@
   "login.form.forgot.password.link": "Glömt ditt lösenord?",
   "login.form.register.link": "Skapa konto",
   "login.form.submit.button": "Logga in",
+  "login.modal.button": "Logga in",
+  "login.modal.title": "Logga in",
   "login.title": "Logga in",
   "lost.connection.description": "\nTyvärr, men det verkar som att du förlorat anslutningen till servern. Det kan vara så att din internetuppkoppling är nere eller att servern är offline",
   "lost.connection.title": "Anslutning förlorad",
@@ -234,6 +236,10 @@
   "menu.main.staffing_time_report": "Tidsrapportera",
   "page.not.found.error.description": "Vi ber om ursäkt, sidan eller resursen du letar efter finns inte.",
   "page.not.found.error.title": "404 - Sidan kan inte hittas",
+  "register.modal.button": "Registrera",
+  "register.modal.title": "Registrera",
+  "registered.modal.description": "Ditt konto har skapats utan problem",
+  "registered.modal.title": "Välkommen {{username}}!",
   "reset.password.form.submit.button": "Byt lösenord",
   "reset.password.title": "Skriv in ditt nya lösenord",
   "sign.for.job.form.submit.button": "Signera",
